--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Run linter
         run: yarn lint
 
-      - name: Run tests
-        run: ./bin/test.sh
+      # - name: Run tests
+      #   run: ./bin/test.sh
 
       - name: Publish package to NPM
         env:
