Updated ts config

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,9 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "noEmit": false,
     "rootDir": "src",
     "outDir": "dist",
-    "noEmit": false
+    "declaration": true
   },
   "include": [
     "src"
