--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "module": "commonjs",
-    "target": "esnext",
+    "module": "CommonJS",
+    "target": "ESNext",
     "baseUrl": "src",
     "esModuleInterop": true,
     "skipLibCheck": true,
