--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fastify/cors": "^9.0",
     "@fastify/response-validation": "^2.6",
     "@fastify/swagger": "^8.15",
-    "bcrypt": "^5.1",
+    "bcryptjs": "^2.4",
     "bullmq": "^5.12",
     "dotenv": "^16.4",
     "fastify": "^4.28",
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@apeframework/eslint-config": "0.0.0-dev.36",
     "@stylistic/eslint-plugin": "^2.7",
-    "@types/bcrypt": "^5.0",
+    "@types/bcryptjs": "^2.4",
     "@types/fs-extra": "^11.0",
     "@types/jest": "^29.5",
     "@types/node": "^22.5",
