--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apeframework",
   "private": true,
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint",
     "test": "jest",
     "compile": "tsc",
     "build": "tsc -p tsconfig.build.json",
@@ -12,17 +12,17 @@
     "node": "^22"
   },
   "dependencies": {
-    "@fastify/cors": "^9.0",
-    "@fastify/response-validation": "^2.6",
-    "@fastify/swagger": "^8.15",
+    "@fastify/cors": "^10.0",
+    "@fastify/response-validation": "^3.0",
+    "@fastify/swagger": "^9.2",
     "bcryptjs": "^2.4",
-    "bullmq": "^5.12",
+    "bullmq": "^5.19",
     "dotenv": "^16.4",
-    "fastify": "^4.28",
+    "fastify": "^5.0",
     "fs-extra": "^11.2",
     "ical-generator": "^8.0",
     "ioredis": "^5.4",
-    "jose": "^5.8",
+    "jose": "^5.9",
     "nodemailer": "^6.9",
     "openapi-types": "^12.1",
     "pino": "^9.4",
@@ -30,28 +30,27 @@
     "yargs-parser": "^21.1"
   },
   "peerDependencies": {
-    "@types/node": "^22.5",
+    "@types/node": "^22.7",
     "ts-node": "^10.9",
-    "typescript": "^5.5"
+    "typescript": "^5.6"
   },
   "devDependencies": {
-    "@apeframework/eslint-config": "0.0.0-dev.36",
-    "@stylistic/eslint-plugin": "^2.7",
+    "@apeframework/eslint": "0.0.0-dev.8",
+    "@stylistic/eslint-plugin": "^2.9",
     "@types/bcryptjs": "^2.4",
     "@types/fs-extra": "^11.0",
     "@types/jest": "^29.5",
-    "@types/node": "^22.5",
+    "@types/node": "^22.7",
     "@types/nodemailer": "^6.4",
     "@types/yargs-parser": "^21.0",
-    "@typescript-eslint/eslint-plugin": "^8.4",
-    "@typescript-eslint/parser": "^8.4",
-    "eslint": "^8.57",
-    "eslint-plugin-import": "^2.30",
+    "eslint": "^9.12",
+    "eslint-plugin-import": "^2.31",
     "eslint-plugin-jest": "^28.8",
     "jest": "^29.7",
     "npm-check-updates": "^17.1",
     "ts-jest": "^29.2",
     "ts-node": "^10.9",
-    "typescript": "^5.5"
+    "typescript": "^5.6",
+    "typescript-eslint": "^8.8"
   }
 }
