--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "typescript": "^5.6"
   },
   "devDependencies": {
-    "@apeframework/eslint": "0.0.0-dev.8",
-    "@stylistic/eslint-plugin": "^2.9",
+    "@apeframework/eslint": "0.0.0-dev.10",
     "@types/bcryptjs": "^2.4",
     "@types/fs-extra": "^11.0",
     "@types/jest": "^29.5",
@@ -44,13 +43,10 @@
     "@types/nodemailer": "^6.4",
     "@types/yargs-parser": "^21.0",
     "eslint": "^9.12",
-    "eslint-plugin-import": "^2.31",
-    "eslint-plugin-jest": "^28.8",
     "jest": "^29.7",
     "npm-check-updates": "^17.1",
     "ts-jest": "^29.2",
     "ts-node": "^10.9",
-    "typescript": "^5.6",
-    "typescript-eslint": "^8.8"
+    "typescript": "^5.6"
   }
 }
