--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fastify/cors": "^10.0",
     "@fastify/response-validation": "^3.0",
     "@fastify/swagger": "^9.2",
+    "ajv": "^8.17",
     "bcryptjs": "^2.4",
     "bullmq": "^5.19",
     "dotenv": "^16.4",
+    "fast-uri": "^3.0",
     "fastify": "^5.0",
     "fs-extra": "^11.2",
     "ical-generator": "^8.0",
