Updated eslint config

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           yarn build
-          ./bin/package.js ${{ steps.tag.outputs.version }}
-          cd $GITHUB_WORKSPACE/dist
+          node bin/package ${{ steps.tag.outputs.version }}
+          cd dist
           npm publish \
             --tag=${{ steps.tag.outputs.dev == 'true' && 'dev' || 'latest' }}
