--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": "^22"
   },
   "dependencies": {
+    "@fastify/compress": "^8.0",
     "@fastify/cors": "^10.0",
     "@fastify/response-validation": "^3.0",
     "@fastify/swagger": "^9.4",
