--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p tsconfig.build.json",
     "update": "ncu"
   },
+  "type": "module",
   "engines": {
     "node": "^22"
   },
@@ -41,7 +42,7 @@
     "typescript": "^5.7"
   },
   "devDependencies": {
-    "@apeframework/eslint": "0.0.0-dev.16",
+    "@apeframework/eslint": "0.0.0-dev.18",
     "@types/jest": "^29.5",
     "@types/node": "^22.10",
     "eslint": "^9.17",
