Added package exports

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,6 @@ jobs:
         run: |
           yarn build
           node bin/package ${{ steps.tag.outputs.version }}
-          cd dist
+          cd package
           npm publish \
             --tag=${{ steps.tag.outputs.dev == 'true' && 'dev' || 'latest' }}
