--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "type": "module",
   "engines": {
-    "node": "^22"
+    "node": ">=22"
   },
   "dependencies": {
     "@fastify/compress": "^8.0",
@@ -42,7 +42,7 @@
     "typescript": "^5.7"
   },
   "devDependencies": {
-    "@apeframework/eslint": "0.0.0-dev.24",
+    "@apeframework/eslint": "0.0.0-dev.25",
     "@types/jest": "^29.5",
     "@types/node": "^22.10",
     "eslint": "^9.17",
