--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "module": "ESNext",
-    "target": "ESNext",
     "baseUrl": "src",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ESNext",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true
